fix: remove overflow-x mobile setting

--- a/app/assets/stylesheets/threads.css.scss
+++ b/app/assets/stylesheets/threads.css.scss
@@ -258,10 +258,6 @@ a.thread-forum-plate:active {
 
 @media only screen and (max-width : 320px), only screen and  (max-width : 480px) {
   .root {
-    width:auto;
-    min-width:inherit;
-    overflow-x:scroll;
-    display:block;
     font-size:.7em;
     line-height: 1.1em;
   }
